--- a/settings.html
+++ b/settings.html
@@ -41,6 +41,15 @@
             </div>
             <div class="form-group">
                 <label>
+                    Run on Startup
+                </label>
+                <select id="run-on-startup-select">
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>
                     Always on top
                 </label>
                 <select id="always-on-top-select">
@@ -52,7 +61,7 @@
                 <label>
                     Shortcut
                 </label>
-                <input type="text" id="shortcut-input" placeholder="Shortcut (e.g., Win+Space)">
+                <input type="text" id="shortcut-input" placeholder="Shortcut (e.g., Shift+Space)">
             </div>
         </div>
     </div>
@@ -65,6 +74,7 @@
         const clearHistoryBtn = document.getElementById('clear-history-btn');
         const clearStatus = document.getElementById('clear-status');
         const colorSchemeSelect = document.getElementById('color-scheme-select');
+        const runOnStartupSelect = document.getElementById('run-on-startup-select');
         const alwaysOnTopSelect = document.getElementById('always-on-top-select');
         const shortcutInput = document.getElementById('shortcut-input');
         
@@ -84,11 +94,14 @@
                 // Set color scheme
                 colorSchemeSelect.value = currentSettings.colorScheme || 'system';
 
+                // Set run on startup
+                runOnStartupSelect.value = currentSettings.runOnStartup || 'yes';
+
                 // Set always on top
                 alwaysOnTopSelect.value = currentSettings.alwaysOnTop || 'yes';
 
                 // Load shortcut
-                shortcutInput.value = currentSettings.shortcut || 'Win+Space';
+                shortcutInput.value = currentSettings.shortcut || 'Shift+Space';
             } catch (error) {
                 console.error('Failed to load settings:', error);
             }
@@ -120,6 +133,16 @@
                 console.log('Color scheme saved:', colorSchemeSelect.value);
             } catch (error) {
                 console.error('Failed to save color scheme:', error);
+            }
+        });
+
+        // Save run on startup when it changes
+        runOnStartupSelect.addEventListener('change', async () => {
+            try {
+                await window.electronAPI.saveSetting('runOnStartup', runOnStartupSelect.value);
+                console.log('Run on Startup saved:', runOnStartupSelect.value);
+            } catch (error) {
+                console.error('Failed to save Run on Startup:', error);
             }
         });
 
